# dene

./: .fuse_hidden00014d310000001c  .fuse_hidden0003186f00000006  Cargo.toml  Dioxus.toml  README.md  TODO.md  app.json  babel.config.js  drizzle.config.ts  metro.config.js  package.json  tailwind.config.js  tsconfig.json
assets/: tailwind.css
assets/data/: equipments.json  muscle_groups.json  muscles.json
src/: global.css  lib.rs  main.rs
src/app/: _layout.tsx  mod.rs  onboarding.tsx  settings.tsx
src/app/(marketing)/: _layout.tsx  pp.tsx  tos.tsx
src/app/(protected)/: _layout.tsx  settings.tsx
src/app/(tabs)/: _layout.tsx  home.tsx  index.tsx  main.tsx  profile.tsx
src/app/settings/: index.tsx
src/domain/: event.ts  index.ts  shared.ts
src/domain/exercise/: index.ts  model.ts
src/domain/muscle/: event.ts  index.ts  model.ts
src/domain/routine/: index.ts  model.ts
src/domain/session/: event.ts  index.ts  model.ts
src/domain/set/: index.ts  model.ts
src/domain/workout/: index.ts  model.ts
src/entities/: schema.ts
src/entities/equipment/: equipment.schema.ts  equipment.types.ts  index.ts
src/entities/exercise/: exercise.schema.ts  exercise.types.ts  index.ts
src/entities/muscle/: index.ts  muscle.schema.ts  muscle.types.ts
src/entities/profile/: profile.schema.ts
src/entities/routine/: index.ts  (+2 more)
src/pages/: home.rs
src/shared/: mod.rs  themes.ts  variables.rs
src/widgets/: animated-drawer-screen-wrapper.tsx  calendar.tsx  echo.rs  height-picker.tsx  index.ts  loading.tsx  splash-screen-controller.tsx  weight-picker.tsx
(+112 files in other folders)
