[package]
name = "dene"
version = "0.1.0"
authors = ["Rakhat Yskak <yskak.rakhat@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "dene"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["mobile", "router", "logger"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }

# Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Errors
# thiserror = "2.0.11"
# anyhow = "1.0.95"

# UI
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }
lucide-dioxus = { version = "2.562.0", features = ["all-icons"] }
